deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-app
  labels:
    app: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-app
        image: dockerrock123/springapp:v12
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 7777    
        ports:
        - containerPort: 7777
        

---
apiVersion: v1
kind: Service
metadata:
  name: service-app
  labels:
    app: demo-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 7777
    protocol: TCP
  selector:
    app: demo-app
