ingress-domain.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: booking-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "openhpe.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: booking
spec:
  hosts:
  - "openhpe.com"
  gateways:
  - booking-gateway
  http:
  - match:
    - uri:
        prefix: /users
    route:
    - destination:
        host: service-app
        port:
          number: 7777
